--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">SimpleTodo</string>
     <string name="btn_add_task">Add Task</string>
     <string name="et_add_task_text">Add a task here!</string>
+    <string name="btn_edit_task">Save</string>
 </resources>
